--- a/css/main-style.css
+++ b/css/main-style.css
@@ -3,17 +3,41 @@ body {
     padding: 0px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
+
+#bgvid {
+    margin: 0px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit:cover;
+    min-width: 100%;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .header {
     padding: 10px 5%;
-    background: #1f2937;
-    height: 50px;
+    background: rgba(013, 013, 013, .4);
+    height: 60px;
     display: flex;
     color: white;
     align-items: center;
     justify-content: space-between;
     flex-shrink: 0;
+    margin-bottom: 20px;
 }
-a {
+
+.header img {
+    height: 70px;
+    width: 70px;
+    padding: 10px;
+    margin-top: 10px;
+}
+
+
+.header , a {
     text-decoration: none;
     color: white;
 }
@@ -34,16 +58,21 @@ a {
 
 .header2 {
     height: 300px;
-    background-color: #1f2937;
+    background-image:linear-gradient(rgba(31, 41, 55, .8),rgba(114, 114, 114, 0.8),rgba(31, 41, 55, .8));
     display: flex;
     color: white;
     align-items: center;
     justify-content: space-evenly;
     flex-wrap: nowrap;
+    border-radius: 10px;
+    margin: 0px 5%;
+    overflow: hidden;
+    margin-bottom: 20px;
 }
 
 .left-side {
     width: 50%;
+    max-height: 250px;
 }
 
 .left-side > .title {
@@ -56,6 +85,7 @@ a {
 .left-side > .title-description {
     margin-bottom: 10px;
     color: #b4bcc5;
+    font-size: 15px;
 }
 
 .left-side > button {
@@ -67,13 +97,10 @@ a {
     text-align: center;
 }
 
-.right-side {
-    
-}
-
 .right-side img {
     height: 250px;
-    width: 250px;
+    width: 180px;
+    border: 5px solid rgba(255, 255, 255, .8);
 }
 
 .mid {
@@ -81,27 +108,52 @@ a {
     display: flex;
     justify-content: center;
     height: 200px;
+    max-height: 200px;
     align-items: center;
+}
+
+.info > a > img {
+    height: 100px;
+    width: 100px;
+    border-radius: 10px;
+    object-fit: cover;
+    border-top: #ccc 5px solid;
+    border-right: #ccc 5px solid;
+    border-bottom: #777 5px solid;
+    border-left: #777 5px solid;
+}
+
+.info > a :hover {
+    border: 5px solid rgba(41, 41, 41, 0.9);
 }
 
 .info > img {
     height: 100px;
     width: 100px;
     border-radius: 10px;
+    object-fit: cover;
 }
-
 .info {
+    max-height: 200px;
+    background-color: rgba(013, 013, 013, .97);
+    padding: 20px;
     text-align: center;
     max-width: 200px;
+    font-weight: bold;
+    text-transform: capitalize;
+    color: rgb(204, 204, 204);
 }
 .quote {
+    margin: 0px 5%;
+    margin-top: 20px;
+    border-radius: 10px;
     display: flex;
     padding: 10px 5%;
     flex-direction: column;
     align-content: space-between;
     justify-content: center;
     height: 200px;
-    background-color: #c9c9c9;
+    background-color: rgba(206, 206, 206, 0.8);
     flex-wrap: nowrap;
     text-overflow: ellipsis;
 }
@@ -161,4 +213,5 @@ a {
     font-size: 15px;
     text-align: center;
     padding: 5%;
+    margin: 0px;
 }
